@@ -359,7 +359,7 @@ public class TajoConf extends Configuration {
     $BEHAVIOR_ARITHMETIC_ABORT("tajo.behavior.arithmetic-abort", false),
 
     // ResultSet ---------------------------------------------------------
-    $RESULT_SET_FETCH_ROWNUM("tajo.resultset.fetch.rownum", 200)
+    $RESULT_SET_FETCH_ROWNUM("tajo.resultset.fetch.rownum", 200),
     ;
 
     public final String varname;
