@@ -158,6 +158,8 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1067: INSERT OVERWRITE INTO should not remove all partitions. (jaehwa)
+
     TAJO-1065: The \admin -cluster argument doesn't run as expected.
     (Jongyoung Park via hyunsik)
 
